Tue Jun  4 00:44:27 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/fileutils/test_fileutils.rb (TestFileUtils#test_mkdir): add
	  EEXIST for Linux. (suggested by nurse)

Mon Jun  3 23:58:19 2013  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/fileutils.rb (FileUtils.rmdir): use remove_tailing_slash.
	* test/fileutils/test_fileutils.rb: test for above.

Mon Jun  3 23:47:55 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bitlength_bdigit): New function.
	  (rb_big_pow): Use bitlength_bdigit instead of ffs.

Mon Jun  3 23:11:19 2013  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb: fix behavior when mkdir/mkdir_p accepted "/".
	* test/fileutils/test_fileutils.rb: add test for above change.
	  Patched by Mitsunori Komatsu. [GH-319]

Mon Jun  3 19:02:20 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (is_hfs): use the file descriptor instead of a path.

Mon Jun  3 07:15:17 2013  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: removes AC_CHECK_FUNCS(readdir_r). readdir_r()
	  is only used from dir.c and it doesn't need readdir_r().
	* configure.in (SIZEOF_STRUCT_DIRENT_TOO_SMALL): removed. It is
	  only used for readdir_r.
	* dir.c: removes NAME_MAX_FOR_STRUCT_DIRENT. It is not right way
	  to detect maximum length of path len. POSIX require to use
	  fpathconf(). IOW, it might have lead to make a vulnerability
	  using stack smashing. Moreover, readdir() works enough for our
	  usage.
	* dir.c (READDIR): removes an implementation which uses
	  readdir_r() and parenthesize in a macro body correctly.
	* dir.c (dir_read): removes IF_HAVE_READDIR_R(DEFINE_STRUCT_DIRENT
	  entry), it is used only for readdir_r().
	* dir.c (dir_each): ditto.
	* dir.c (glob_helper): ditto.

	* dir.c (READDIR): removes entry and dp argument.
	* dir.c (dir_read): adjust for the above change.
	* dir.c (dir_each): ditto.
	* dir.c (glob_helper): ditto.

Mon Jun  3 03:40:29 2013  NARUSE, Yui  <naruse@ruby-lang.org>
